--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emailjs/browser": "^3.10.0",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "bootstrap": "^5.2.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.16.0",
     "framer-motion": "^9.0.4",
     "i18next": "^22.4.9",
+    "js-cookie": "^3.0.1",
     "next": "13.1.6",
     "next-sitemap": "^3.1.49",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -28,6 +30,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.1.5",
+    "react-redux": "^8.0.5",
     "sharp": "^0.31.3"
   }
 }
