--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.1.5",
     "react-redux": "^8.0.5",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "swiper": "^9.1.0"
   }
 }
