--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.1.5",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.0.5",
     "sharp": "^0.31.3",
     "swiper": "^9.1.0"
